# model-based-diffusion

./: load_model.py  pyproject.toml
assets/zx120/: zx120-bucket.urdf  zx120.mjcf  zx120.urdf
assets/zx120/zx120_description/meshes/: zx120-arm.stl  zx120-boom.stl  zx120-bucket.stl
mbd/assets/zx120/: zx120.xml
mbd/assets/zx120/zx120_description/meshes/: zx120-arm.stl  zx120-body.stl  zx120-boom.stl  zx120-bucket.stl  zx120-crawler.stl
mbd/envs/: __init__.py  excavatorpose.py  pushT.py
mbd/planners/: mbd_planner.py
mbd/scripts/: vis_diffusion.py
